--- a/Day04/Data_cleaning.ipynb
+++ b/Day04/Data_cleaning.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardisation,Normalisation and Scaling\n",
+    "## Standardisation,Normalisation and Encoding\n",
     "\n",
     "### Normalization\n",
     "\n",
@@ -185,7 +185,16 @@
     "\n",
     "https://www.youtube.com/watch?v=mnKm3YP56PY\n",
     "\n",
-    "\n"
+    "\n",
+    "### Encoding\n",
+    "Most of the Machine learning algorithms can not handle categorical variables unless we convert them to numerical values. Many algorithm’s performances vary based on how Categorical variables are encoded.\n",
+    "\n",
+    "Need to be discussed \n",
+    "* One Hot encoding\n",
+    "* label Encoding\n",
+    "\n",
+    "\n",
+    "https://towardsdatascience.com/all-about-categorical-variable-encoding-305f3361fd02"
    ]
   },
   {
@@ -194,18 +203,7 @@
     "colab_type": "text",
     "id": "5tgvCCJCvhcX"
    },
-   "source": [
-    "\n",
-    "# Kaggle Introduction\n",
-    "\n",
-    "visit Kaggle Notebook show thwm different areas of website\n",
-    "\n",
-    "## competetion Time\n",
-    "\n",
-    "## Kaggle Notebook for data analysis of titanic dataset\n",
-    "# Now go for kaggle Notebook\n",
-    "https://colab.research.google.com/drive/1vUthOFMzTV3uDxzkquIijtDzPtmyHnrc?usp=sharing"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
