--- a/Day04/Data_cleaning.ipynb
+++ b/Day04/Data_cleaning.ipynb
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1038,34 +1038,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>836</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>68.171533</td>\n",
-       "      <td>199.701811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>694</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>70.144874</td>\n",
-       "      <td>190.585377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3351</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>70.013780</td>\n",
-       "      <td>184.374504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4014</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>70.048667</td>\n",
-       "      <td>204.779499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6229</th>\n",
+       "      <th>9705</th>\n",
        "      <td>Female</td>\n",
-       "      <td>60.124167</td>\n",
-       "      <td>119.057425</td>\n",
+       "      <td>65.536702</td>\n",
+       "      <td>148.272980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4892</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>72.760325</td>\n",
+       "      <td>219.521254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5127</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>66.664590</td>\n",
+       "      <td>153.948513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1748</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>70.686247</td>\n",
+       "      <td>194.943655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2124</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>72.089361</td>\n",
+       "      <td>200.435327</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1073,14 +1073,14 @@
       ],
       "text/plain": [
        "      Gender     Height      Weight\n",
-       "836     Male  68.171533  199.701811\n",
-       "694     Male  70.144874  190.585377\n",
-       "3351    Male  70.013780  184.374504\n",
-       "4014    Male  70.048667  204.779499\n",
-       "6229  Female  60.124167  119.057425"
+       "9705  Female  65.536702  148.272980\n",
+       "4892    Male  72.760325  219.521254\n",
+       "5127  Female  66.664590  153.948513\n",
+       "1748    Male  70.686247  194.943655\n",
+       "2124    Male  72.089361  200.435327"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\PIYUSH\\Documents\\weight-height.csv\")\n",
+    "df = pd.read_csv(r\"weight-height.csv\")\n",
     "df.sample(5)"
    ]
   },
@@ -2066,6 +2066,271 @@
     "\n",
     "Above shows original dataframe data 10000 data points. Out of that we removed 7 outliers (i.e. 10000-9993)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outlier Detection and Removal Using IQR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mohan</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>maria</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sakib</td>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tao</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>virat</td>\n",
+       "      <td>5.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  height\n",
+       "0  mohan     1.2\n",
+       "1  maria     2.3\n",
+       "2  sakib     4.9\n",
+       "3    tao     5.1\n",
+       "4  virat     5.2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('height.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8.390000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.782812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.275000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>40.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          height\n",
+       "count  20.000000\n",
+       "mean    8.390000\n",
+       "std     8.782812\n",
+       "min     1.200000\n",
+       "25%     5.350000\n",
+       "50%     5.700000\n",
+       "75%     6.275000\n",
+       "max    40.200000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.3500000000000005, 6.275)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q1 = df.height.quantile(0.25)\n",
+    "Q3 = df.height.quantile(0.75)\n",
+    "Q1, Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9249999999999998"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IQR = Q3 - Q1\n",
+    "IQR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.962500000000001, 7.6625)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_limit = Q1 - 1.5*IQR\n",
+    "upper_limit = Q3 + 1.5*IQR\n",
+    "lower_limit, upper_limit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
