--- a/Day09/Untitled.ipynb
+++ b/Day09/Untitled.ipynb
@@ -756,10 +756,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', 'how', 'are', 'you']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s='hello how are you'\n",
+    "s.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectrorizer\n",
+    "cv=CountVectrorizer(stop_words='english')\n",
+    "data_cv=cv.fit_transform()\n"
+   ]
   }
  ],
  "metadata": {
