--- a/Day09/Data_cleaning.ipynb
+++ b/Day09/Data_cleaning.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        " '♪ Can I kick it? ♪ ♪ Yes, you can ♪ ♪ Can I kick it? ♪ ♪ Yes, you can ♪ ♪ Can I kick it? ♪ ♪ Yes, you can ♪ ♪ Well, I’m gone ♪ ♪ Go on, then ♪ ♪ Can I kick it? To my Tribe that flows in layers ♪ ♪ Right now, Phife is a poem sayer ♪ ♪ At times, I’m a studio conveyor ♪ ♪ Mr. Dinkins Would you please be my mayor? ♪ ♪ You’ll be doing us a really big favor ♪ ♪ Boy, this track really has a lot Of flavor ♪ ♪ When it comes to rhythms Quest is your savior ♪ ♪ Follow us for the funky behavior ♪ ♪ Make a note On the rhythm we gave ya ♪  ♪ Feel free, drop your pants Check your hair ♪ ♪ Do you like the garments That we wear? ♪ ♪ I instruct you to be the obeyer ♪ ♪ A rhythm recipe that you’ll savor ♪ ♪ Doesn’t matter if you’re minor Or major ♪ ♪ Yes, the Tribe of the game We’re the player ♪ ♪ As you inhale Like a breath of fresh air ♪ I’m rich, biatch!']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "dict_keys(['Vir', 'dave', 'ricky', 'bo', 'bill', 'jim', 'john', 'hasan', 'ali', 'anthony', 'mike', 'joe'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "ricky    Hello. Hello! How you doing? Great. Thank you. Wow. Calm down. Shut the fuck up. Thank you. What a lovely welcome. I’m gonna try my hardest tonigh..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "ricky    hello hello how you doing great thank you wow calm down shut the fuck up thank you what a lovely welcome i’m gonna try my hardest tonight you’re t..."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,6 +463,116 @@
     "    return text\n",
     "\n",
     "round2 = lambda x: clean_text_round2(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transcript</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Vir</th>\n",
+       "      <td>i lost  of my mind its very freeing you should see the look on your faces right now by the way oh good evening san francisco are you guys excited ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ali</th>\n",
+       "      <td>ladies and gentlemen please welcome to the stage ali wong hi hello welcome thank you thank you for coming hello hello we are gonna have to get thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>anthony</th>\n",
+       "      <td>thank you thank you thank you san francisco thank you so much so good to be here people were surprised when i told em i was gonna tape my special ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bill</th>\n",
+       "      <td>all right thank you thank you very much thank you thank you thank you how are you whats going on thank you its a pleasure to be here in the great...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bo</th>\n",
+       "      <td>bo what old macdonald had a farm e i e i o and on that farm he had a pig e i e i o here a snort there a old macdonald had a farm e i e i o  this i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dave</th>\n",
+       "      <td>this is dave he tells dirty jokes for a living that stare is where most of his hard work happens it signifies a profound train of thought the alch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hasan</th>\n",
+       "      <td>whats up davis whats up im home i had to bring it back here netflix said where do you want to do the special la chicago new york i was like nah ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jim</th>\n",
+       "      <td>ladies and gentlemen please welcome to the stage mr jim jefferies  hello sit down sit down sit down sit down sit down  thank you boston i appre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>joe</th>\n",
+       "      <td>ladies and gentlemen welcome joe rogan  what the fuck is going on san francisco thanks for coming i appreciate it god damn put your phone down ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>john</th>\n",
+       "      <td>armed with boyish charm and a sharp wit the former snl writer john mulaney offers sly takes on marriage his beef with babies and the time he met b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mike</th>\n",
+       "      <td>wow hey thank you thanks thank you guys hey seattle nice to see you look at this look at us were here this is crazy its insane so about five years...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ricky</th>\n",
+       "      <td>hello hello how you doing great thank you wow calm down shut the fuck up thank you what a lovely welcome im gonna try my hardest tonight youre thi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                    transcript\n",
+       "Vir      i lost  of my mind its very freeing you should see the look on your faces right now by the way oh good evening san francisco are you guys excited ...\n",
+       "ali      ladies and gentlemen please welcome to the stage ali wong hi hello welcome thank you thank you for coming hello hello we are gonna have to get thi...\n",
+       "anthony  thank you thank you thank you san francisco thank you so much so good to be here people were surprised when i told em i was gonna tape my special ...\n",
+       "bill      all right thank you thank you very much thank you thank you thank you how are you whats going on thank you its a pleasure to be here in the great...\n",
+       "bo       bo what old macdonald had a farm e i e i o and on that farm he had a pig e i e i o here a snort there a old macdonald had a farm e i e i o  this i...\n",
+       "dave     this is dave he tells dirty jokes for a living that stare is where most of his hard work happens it signifies a profound train of thought the alch...\n",
+       "hasan      whats up davis whats up im home i had to bring it back here netflix said where do you want to do the special la chicago new york i was like nah ...\n",
+       "jim         ladies and gentlemen please welcome to the stage mr jim jefferies  hello sit down sit down sit down sit down sit down  thank you boston i appre...\n",
+       "joe         ladies and gentlemen welcome joe rogan  what the fuck is going on san francisco thanks for coming i appreciate it god damn put your phone down ...\n",
+       "john     armed with boyish charm and a sharp wit the former snl writer john mulaney offers sly takes on marriage his beef with babies and the time he met b...\n",
+       "mike     wow hey thank you thanks thank you guys hey seattle nice to see you look at this look at us were here this is crazy its insane so about five years...\n",
+       "ricky    hello hello how you doing great thank you wow calm down shut the fuck up thank you what a lovely welcome im gonna try my hardest tonight youre thi..."
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Let's take a look at the updated text\n",
+    "data_clean = pd.DataFrame(data_clean.transcript.apply(round2))\n",
+    "data_clean"
    ]
   },
   {
@@ -569,15 +679,12 @@
     }
    ],
    "source": [
-    "\n",
-    "# Let's take a look at the updated text\n",
-    "data_clean = pd.DataFrame(data_clean.transcript.apply(round2))\n",
     "data_clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +1071,7 @@
        "[12 rows x 7657 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,9 +1081,9 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "cv = CountVectorizer(stop_words='english')\n",
-    "data_cv = cv.fit_transform(data_clean.transcript)\n",
-    "data_dtm = pd.DataFrame(data_cv.toarray(), columns=cv.get_feature_names())\n",
-    "data_dtm.index = data_clean.index\n",
+    "data_cv = cv.fit_transform(data_clean['transcript'])\n",
+    "data_dtm=pd.DataFrame(data_cv.toarray(),columns=cv.get_feature_names())\n",
+    "data_dtm.index=data_clean.index\n",
     "data_dtm"
    ]
   },
